# spacepy

./: .gitignore  .travis.yml  CHANGELOG  CITATION.cff  COPYRIGHT.md  DISTRIBUTE  INSTALL  LICENSE.md  MANIFEST.in  METADATA.in  QuickStartGuide.tex  README.md  README.windows  __init__.py  code-of-conduct.md  make_spacepy_dist.sh  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pyhc-actions.yml
Doc/: Makefile
Doc/source/: ae9ap9.rst  api.rst  borg.rst  capabilities.rst  case_reeves_morley_friedel_2011.rst  case_studies.rst  ci.rst  conf.py  configuration.rst  coordinates.rst  ctrans.rst  data_assimilation.rst  datamanager.rst  datamodel.rst  dep_versions.rst  dependencies.rst  doc_standard.rst  empiricals.rst  help.rst  igrf.rst  index.rst  install.rst  install_linux.rst  install_mac.rst  install_windows.rst  irbempy.rst  lanlstar.rst  omni.rst  plot.rst  poppy.rst  publications.rst  py2k_eol.rst  pybats.rst  pycdf.rst  pycdf_const.rst  pycdf_lib.rst  pycdf_reference.rst  pythonic.rst  quickstart.rst  radbelt.rst  (+11 more)
Doc/source/_static/: copybutton.js  default.css
Doc/source/_templates/: clean_function.rst  clean_module.rst  layout.html
Doc/source/pyplots/: datamanager_rebin_1.py  datamanager_rebin_2.py  datamanager_rebin_3.py  datamanager_rebin_4.py  datamanager_rebin_5.py  datamanager_rebin_6.py  datamanager_rebin_7.py  datamanager_rebin_common.py
QuickStart/: Makefile  README  README_FOR_DEVELOPERS  conf.py  index.rst  make.bat
QuickStart/_templates/: layout.html
developer/: README.txt
developer/benchmarks/: hypot.py  pycdf_bench.py  pycdf_numpy_profiles.txt
developer/misc/: classlists.py
developer/scripts/: build_win.cmd  compare_irbem.py  linux_wheels.sh  mac_arm_wheels.sh  mac_x86_wheels.sh  make_poppy_expected.py  manylinux_wheels.sh  net2txt.py  pycdf_load_test.py  rubber_seconds.py  spacepy_win.py  spacepy_win_anaconda.py  test_all.sh  test_linux_wheels.sh  test_mac_wheels.sh  test_wheels.sh  test_win_wheels.cmd  unix_wheels.sh  win_build_system_setup.cmd  win_build_system_teardown.cmd
developer_misc/: README.txt
scripts/: istp_checks.py
spacepy/: LANLstar.py  Makefile  __init__.py  ae9ap9.py  borg.py  constants.py  coordinates.py  data_assimilation.py  datamanager.py  datamodel.py  empiricals.py  igrf.py  lib.py  omni.py  onerapy.py  poppy.c  poppy.py  radbelt.py  realtime.py  rst.py  satdata.py  seapy.py  spacepy_EnKF.py  spacepy_logo1.psd  spacetime.py  time.py  toolbox.py  toolbox_test.py  utils.py
spacepy/LANLstar/: LANLstar.f  LANLstar.py  __init__.py
spacepy/ctrans/: __init__.py  coefficients.py  iau80n.py
spacepy/data/: .cvsignore  SEA_epochs_OMNI.txt  igrf14coeffs.txt  spacepy.mplstyle  spacepy.rc  spacepy_altgrid.mplstyle  spacepy_polar.mplstyle
spacepy/doc/: .directory  _cdfpy_interface'-module.html  abc.ABCMeta-class.html  api-objects.txt  api.aux  api.dvi  api.idx  api.ilg  api.ind  api.out  api.ps  api.tex  api.toc  class-tree.html  deprecated-index.html  help.html  identifier-index.html  index.html  module-tree.html  property-class.html  redirect.html  setup-module.html  setup-pysrc.html  spacepy-module.aux  spacepy-module.html  spacepy-module.tex  spacepy-pysrc.html  spacepy.constants-module.aux  spacepy.constants-module.html  spacepy.constants-module.tex  spacepy.constants-pysrc.html  spacepy.constants.Ion-class.html  spacepy.coordinates-module.html  spacepy.coordinates-pysrc.html  spacepy.coordinates.Coords-class.html  spacepy.empiricals-module.aux  spacepy.empiricals-module.html  spacepy.empiricals-module.tex  spacepy.empiricals-pysrc.html  spacepy.getGPS-module.html  (+223 more)
spacepy/irbempy/: NOTES  NOTES.md  __init__.py  irbempy.py
spacepy/libspacepy/: cn_solver.c  ctrace2d.c  poppy.c  toolbox.c
spacepy/onerapy/: .cvsignore  __init__.py  onerapy.py
spacepy/plot/: __init__.py  apionly.py  carrington.py  colourmaps.py  spectrogram.py  utils.py
spacepy/pybats/: TEST_try3d.py  __init__.py  bats.py  batsmath.py  batstest.py  cimi.py  ctrace2d.pyf  ctrace2dmodule.c  ctrace2dtest.c  dgcpm.py  dipole.py  gitm.py  interact.py  kyoto.py  methods.py  pwom.py  qotree.py  ram.py  rampy.py  rcm.py  rim.py  trace2d.c  trace2d.py  y=0_mhd_1_t00070000_n0872925.out
spacepy/pycdf/: __init__.py  _pycdf.py  const.py  istp.py
spacepy/sandbox/: CDFPy_Install  Makefile.OSX  PSDdata.py  PlaneFit.py  Pybats_qotree.py  __init__.py  cdfpy.py  cdfpy_interface.i  cdfpy_interface.py  cdfpy_interface_wrap.c  constants.py  date2num.c  date2num_single.c  date2nummodule.c  datesmodule.c  enKF_test.py  l4_h0_mpa_20011111_v02.sfdu  my_logger.py  polar2cart.py  qotree.py  radbelt.py  radbelt.rst  readconfig.py  repeated_search.py  spacepy_EnKF.py  spectrogram.py  test_date2nummodule.py  test_qotree.py  test_spectrogram.py  use_spectrogram.py  writeconfig.py
spacepy/time/: __init__.py  _datesmodule.c  time.py
spacepy/toolbox/: __init__.py  _toolboxmodule.c  toolbox.py
tests/: coordinates_test.py  empiricals_test.py  enKF_test.py  integration_all.py  integration_omni.py  integration_pybats.py  integration_toolbox.py  irbempy_test.py  omni_test.py  spacepy_testing.py  test_ae9ap9.py  test_all.py  test_base.py  test_borg.py  test_coordinates.py  test_ctrans.py  test_data_assimilation.py  test_datamanager.py  test_datamodel.py  test_datesmodule.py  test_empiricals.py  test_igrf.py  test_irbempy.py  test_lanlstar.py  test_lib.py  test_omni.py  test_plot.py  test_plot_utils.py  test_poppy.py  test_pybats.py  test_pycdf.py  test_pycdf_istp.py  test_rst.py  test_seapy.py  test_spacepy.py  test_spectrogram.py  test_sunpy.py  test_testing.py  test_time.py  test_toolbox.py  (+3 more)
tests/data/: 20130218_rbspa_MagEphem.txt  20130218_rbspa_MagEphem_bad.txt  OMNItest.h5  Run1.AE9.CLoutput_mc_fluence_agg_pctile_75.txt  Run1.AE9.CLoutput_mc_fluence_agg_pctile_95.txt  Run2.AE9.output_pctile_flux_75.txt  Run3.AE9.output_pctile_flux_75.txt  psp_isois-epilo_l2-ic_20190401_v0.0.0.cdf  rbspa_rel04_ect-hope-PA-L3_20121201_v0.0.0.cdf
tests/pycdf/: pycdftest.py  test_pycdf.py
(+400 files in other folders)
