[build-system]
requires = ["setuptools", "wheel",
    "numpy ~= 1.10.0 ; python_version == '3.5'",
    "numpy ~= 1.12.0 ; python_version == '3.6'",
    "numpy ~= 1.15.0 ; python_version == '3.7' and (platform_system != 'Darwin' or platform_machine != 'arm64')",
    "numpy ~= 1.20.0 ; python_version == '3.7' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "numpy ~= 1.17.0 ; python_version == '3.8' and (platform_system != 'Darwin' or platform_machine != 'arm64')",
    "numpy ~= 1.20.0 ; python_version == '3.8' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "numpy ~= 1.18.0 ; python_version == '3.9' and (platform_system != 'Darwin' or platform_machine != 'arm64')",
    "numpy ~= 1.21.0 ; python_version == '3.9' and platform_system == 'Darwin' and platform_machine == 'arm64'",
    "numpy ~= 1.21.0 ; python_version >= '3.10'",
    ]
